# that_mafia_game

./: Cargo.toml  README.md
src/: game.rs  game_interface.rs  game_manager.rs  handlers.rs  lib.rs  lobby.rs  lobby_manager.rs  main.rs
src/game/: game_phase.rs  game_v1.rs  player.rs  roles.rs
src/game_interface/: game_v1.rs
src/game_manager/: local_game_manager.rs
src/handlers/: game_handler.rs  lobby_handler.rs  main_menu_handler.rs
src/lobby/: local_lobby_manager.rs
src/lobby_manager/: local_lobby_manager.rs
