[package]
name = "that_mafia_game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teloxide = { version = "0.12.2", features = ["macros"] }
pretty_env_logger = "0.5"
log = "0.4"
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }
rand = "0.8"
derive_more = "0.99"
dotenv = "0.15.0"
